--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@mui/material": "5.16.1",
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "tailwindcss": "3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
