--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@mui/material": "5.16.1",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
-    "tailwindcss": "3.4.4"
+    "tailwindcss": "3.4.4",
+    "react-router-dom": "6.25.1",
+    "@mui/lab": "5.0.0-alpha.172"
   },
   "scripts": {
     "start": "react-scripts start",
