--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@emotion/styled": "11.11.5",
     "tailwindcss": "3.4.4",
     "react-router-dom": "6.25.1",
-    "@mui/lab": "5.0.0-alpha.172"
+    "@mui/lab": "5.0.0-alpha.172",
+    "@mui/x-charts": "7.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
