--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "@mui/lab": "5.0.0-alpha.172",
+    "@mui/material": "5.16.1",
+    "@mui/x-charts": "7.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "@mui/material": "5.16.1",
-    "@emotion/react": "11.11.4",
-    "@emotion/styled": "11.11.5",
-    "tailwindcss": "3.4.4",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "6.25.1",
-    "@mui/lab": "5.0.0-alpha.172",
-    "@mui/x-charts": "7.11.0",
-    "react-simple-maps": "3.0.0"
+    "react-scripts": "5.0.1",
+    "tailwindcss": "3.4.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
